<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ASettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ServerIP" />

        <EditText
            android:id="@+id/edServerIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="end"
            android:inputType="text"
            android:hint="@string/ServerIP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ServerPort" />

        <EditText
            android:id="@+id/edServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ServerPort"
            android:inputType="number"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Menu" />

        <Spinner
            android:id="@+id/spMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/SelectMenu"
            android:layout_gravity="end"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDownloadMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DownloadMenu" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save" />

</LinearLayout>