<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="14dp"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/Table" />

        <TextView
            android:id="@+id/tvStaff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/Staff" />

        <ImageView
            android:id="@+id/ivShowCard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/basket" />

        <TextView
            android:id="@+id/tvBasket"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/Basket" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#FFFF0000" />

    <LinearLayout
        android:id="@+id/lvContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>